Fix Bug 1261866 - Update links and redirects to mozilla.jp

--- a/bedrock/mozorg/templates/mozorg/contact/communities/japan.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/japan.html
@@ -14,9 +14,11 @@
         <h2>{{ _('Japan') }}</h2>
 
         <ul class="extra">
-          <li><a href="http://www.mozilla.jp/" class="website">mozilla.jp</a></li>
+          <li><a href="https://www.mozilla.jp/" class="website">mozilla.jp</a></li>
           <li><a href="https://twitter.com/mozillajp" class="twitter">@mozillajp</a></li>
-          <li><a href="https://www.facebook.com/foxkeh.jp" class="facebook">Facebook</a></li>
+          <li><a href="https://www.facebook.com/mozillajapan" class="facebook">Facebook</a></li>
+          <li><a href="https://www.facebook.com/foxkeh.jp" class="facebook">Facebook (Foxkeh)</a></li>
+          <li><a href="https://www.youtube.com/user/MozillaJP" class="youtube">YouTube</a></li>
         </ul>
 
         <figure class="feature-img">
