--- a/bedrock/firefox/templates/firefox/organizations/faq.html
+++ b/bedrock/firefox/templates/firefox/organizations/faq.html
@@ -152,7 +152,7 @@
 <h4>{{ _('Is Mozilla Firefox ESR available in my language?') }}</h4>
 <p>
 {% trans url1='..', url2='https://mail.mozilla.org/listinfo/enterprise-de',
-		url3='http://mozilla.jp/business/', url4='mailto:stormy@mozilla.com' %}
+		url3='https://www.mozilla.jp/business/', url4='mailto:stormy@mozilla.com' %}
 	Firefox ESR is available in every locale currently available for Firefox.
 	Because of the precise needs of Firefox ESR, it’s important that anyone
 	deploying the build be registered and participate in an EWG
