[fix bug 1261482] Add onboarding page variations.

--- a/media/css/firefox/onboarding/firstrun-fxa.less
+++ b/media/css/firefox/onboarding/firstrun-fxa.less
@@ -3,18 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../../sandstone/lib.less";
-
-.buildstar(@size, @left, @top, @speed, @delay) {
-    .animation(twinkle @speed ease-in-out @delay infinite alternate-reverse);
-    background: #fff;
-    border-radius: 50%;
-    height: @size;
-    left: @left;
-    opacity: 0;
-    position: absolute;
-    top: @top;
-    width: @size;
-}
+@import "onboarding-lib.less";
 
 html,
 body {
