[fix bug 1262259] Update page title for Yahoo learn more updates

--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
@@ -29,6 +29,14 @@
   {% endif %}
 {% endblock %}
 
+{% block page_title_full %}
+  {% if f == '65' %}
+    {{ _('Try Yahoo Search') }}
+  {% else %}
+    {{ _('Search and see, with Yahoo Search.') }}
+  {% endif %}
+{% endblock %}
+
 {% block body_class %}{% endblock %}
 
 {% block site_header %}
