--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -31,7 +31,7 @@
         <h1>{{ _('More protection. <br>The most privacy. <br>Only from Firefox.') }}</h1>
         <div class="download-buttons">
           <div class="firefox-latest-cta">
-            <a class="try-pb-button button-flat-dark" data-highlight="privateWindow" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
+            <a class="try-pb-button feature-button dark" data-highlight="privateWindow" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
           </div>
           <div class="non-firefox-cta">
             <p>{{ _('To give the new Private Browsing a try, download Firefox.') }}</p>
@@ -142,7 +142,7 @@
       <div class="download-buttons">
         <div class="firefox-latest-cta">
           <h2>{{ _('Try it now to stay in control') }}</h2>
-          <a class="try-pb-button button-flat-dark" data-highlight="privateWindow" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
+          <a class="try-pb-button feature-button dark" data-highlight="privateWindow" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
         </div>
         <div class="non-firefox-cta">
           <h2>{{ _('To give the new Private Browsing a try, download Firefox.') }}</h2>
