--- a/bedrock/mozorg/templates/mozorg/about/policy/lean-data.html
+++ b/bedrock/mozorg/templates/mozorg/about/policy/lean-data.html
@@ -20,7 +20,7 @@
     <h2 class="title-shadow-box">{{ _('Lean Data Practices') }}</h2>
     <p class="lead-in">{{ _('Staying lean and being smart about how you collect data can build trust with your users and ultimately help grow your business.') }}</p>
 
-    <a href="https://github.com/mozilla/lean-data-practices" class="github-button more" rel="external"  target="_blank">{{ _('Get the toolkit') }}</a>
+    <a href="https://github.com/mozilla/lean-data-practices" class="github-button feature-button" rel="external"  target="_blank">{{ _('Get the toolkit') }}</a>
 
     <section class="why">
       <h3>{{ ('How Lean Data Practices build strong brands') }}</h3>
@@ -72,7 +72,7 @@
     <section class="toolkit">
       <h3>{{ _('Get the toolkit') }}</h3>
       <p>{{ _('We’ve put together a toolkit to help you implement Lean Data Practices at your company.') }}</p>
-      <a href="https://github.com/mozilla/lean-data-practices" class="github-button more" rel="external"  target="_blank">{{ _('Get the toolkit') }}</a>
+      <a href="https://github.com/mozilla/lean-data-practices" class="github-button feature-button" rel="external"  target="_blank">{{ _('Get the toolkit') }}</a>
     </section>
   </main>
 {% endblock %}
