Fix Bug 1262530 - Newsletter sign-up button on /firefox/all/ is hard to see

--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -118,7 +118,7 @@
 {% block email_form %}
   <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="content container">
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.')) }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='white') }}
     </div>
   </aside>
 {% endblock %}
