Fix Bug 1262603 - remove "friends" and "partner" links from footer site wide

--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -13,9 +13,7 @@
           <div class="col col-2">
             <ul class="links-join">
               <li><a href="{{ url('mozorg.contact.contact-landing') }}" data-link-type="footer" data-link-name="Contact Us">{{ _('Contact Us') }}</a></li>
-              <li class="wrap"><a href="{{ url('mozorg.partnerships') }}" data-link-type="footer" data-link-name="Partner with Us">{{ _('Partner with Us' ) }}</a></li>
-              <li class="clear"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
-              <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}" data-link-type="footer" data-link-name="Firefox Friends">{{ _('Firefox Friends') }}</a></li>
+              <li class="wrap"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
               <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></li>
             </ul>
             <ul class="links-legal">
