Fix template syntax error (re bug 1260807)

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -26,9 +26,7 @@
   </p>
 
   <p>
-    {% trans
-      firefox=url('firefox.new'),
-    %}
+    {% trans firefox=url('firefox.new') %}
       To keep the Web accessible, we build products that create
       opportunity and inspire further innovation. Many of Mozilla’s
       products are developed by the Mozilla Corporation, a wholly-owned
