[bug 1248040] Update GTM data attributes missed on first pass through - 2nd round

--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -454,7 +454,7 @@
           </li>
         {% endif %}
         <li class="app-store">
-          <a class="more" href="{{ ios_link }}">{{ _('Go to the App Store')}}</a>
+          <a class="more" href="{{ ios_link }}" data-link-type="download" data-download-os="iOS">{{ _('Go to the App Store')}}</a>
         </li>
         <li class="google-play">
           <a class="more" href="{{ android_link }}" data-link-type="download" data-download-os="Android">{{ _('Go to Google Play')}}</a>
