--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -84,7 +84,7 @@
     <ul class="product-list">
       <li class="product" id="product-desktop">
         <div class="inner">
-          <a href="{{ url('firefox.desktop.index') }}" data-link-type="button" data-link-name="Firefox for Desktop">
+          <a href="{{ url('firefox.desktop.index') }}" data-link-type="button" data-link-name="Go to Fx Desktop Product Page">
             {# L10n: <span> tag below adds visual style to "for" text #}
             <h2>{{ _('Firefox <span>for</span> desktop') }}</h2>
             <p>{{ _('Trusted. Flexible. Fast.') }}</p>
@@ -94,7 +94,7 @@
 
       <li class="product highlight" id="product-ios">
         <div class="inner">
-          <a href="{{ url('firefox.ios') }}" data-link-type="button" data-link-name="Firefox for iOS">
+          <a href="{{ url('firefox.ios') }}" data-link-type="button" data-link-name="Go to Fx iOS Product Page">
             {# L10n: <span> tag below adds visual style to "for" text #}
             <h2>{{ _('Firefox <span>for</span> iOS') }}</h2>
           {% if l10n_has_tag('ios_product_tagline') %}
@@ -112,7 +112,7 @@
 
       <li class="product" id="product-android">
         <div class="inner">
-          <a href="{{ url('firefox.android.index') }}" data-link-type="button" data-link-name="Firefox for Android">
+          <a href="{{ url('firefox.android.index') }}" data-link-type="button" data-link-name="Go to Fx Android Product Page">
             {# L10n: span below adds visual style to "for" text #}
             <h2>{{ _('Firefox <span>for</span> Android') }}</h2>
             <p>{{ _('Make it uniquely yours.') }}</p>
