--- a/bedrock/firefox/templates/firefox/new/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/scene1.html
@@ -61,7 +61,7 @@
     {% if l10n_has_tag('firefox_new_refresh_button') %}
       <div id="refresh-firefox-wrapper">
         <p>{{ _('Give Firefox a tune up') }}</p>
-        <button type="button" id="refresh-firefox" data-interaction="Refresh Firefox" data-element-action="Firefox Desktop" class="button">{{ _('Refresh Firefox') }}</button>
+        <button type="button" id="refresh-firefox" data-button-name="Refresh Firefox" class="button">{{ _('Refresh Firefox') }}</button>
         <a href="https://support.mozilla.org/kb/refresh-firefox-reset-add-ons-and-settings?utm_source=mozilla.org&amp;utm_medium=referral&amp;utm_campaign=learn-more-link" rel="external">{{ _('Learn more') }}</a>
       </div>
     {% endif %}
