--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -232,6 +232,19 @@
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/sveilleux/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/dr-sean-white/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/sean-white.jpg') }}">
+          <span class="fn" itemprop="name">Dr. Sean White</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('VP, Technology Strategy') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/seanwhite">@seanwhite</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/seanwhite/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
     </ul>
 
     <h3 id="mgmt-foundation"><a href="{{ url('foundation.index') }}">{{ _('Mozilla Foundation') }}</a></h3>
