fix the rtl css on the sync page

--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -409,6 +409,12 @@ html[dir="rtl"] {
         left: 85px;
         right: auto;
     }
+    .instructions {
+        text-align: right;
+        section {
+            float: right;
+        }
+    }
 }
 
 /* Tablet Layout: 760px */
