--- a/media/css/firefox/private_browsing/private-browsing.less
+++ b/media/css/firefox/private_browsing/private-browsing.less
@@ -593,3 +593,21 @@ html[lang^='en'] {
         width: @widthMobile;
     }
 }
+
+/* RTL support */
+html[dir="rtl"] {
+    .private-browsing:after {
+        content:none
+    }
+    .with-tracking:after {
+        color: #6fbf4a;
+        content:'+';
+        .open-sans-extrabold();
+        .font-size(100px);
+        height: 100px;
+        width: 100px;
+        position: absolute;
+        right: -50px;
+        top: 0;
+    }
+}
