--- a/bedrock/newsletter/templates/newsletter/includes/form.html
+++ b/bedrock/newsletter/templates/newsletter/includes/form.html
@@ -72,7 +72,7 @@
 
     <div class="form-submit">
       <input type="submit" id="footer_email_submit"
-             value="{% if submit_text %}{{ submit_text }}{% else %}{% if LANG.startswith('en-') %}{{ _('Sign Up Now') }}{% else %}{{ _('Sign me up') }}{% endif %}{% endif %}" class="button-newsletter {{ button_class }}">
+             value="{% if submit_text %}{{ submit_text }}{% else %}{{ _('Sign Up Now') }}{% endif %}" class="button-newsletter {{ button_class }}">
 
       {% if details %}
         <p class="form-details">
