[bug 126286] Update Sean White
Dropping the "Dr."

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -236,7 +236,7 @@
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/dr-sean-white/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/sean-white.jpg') }}">
-          <span class="fn" itemprop="name">Dr. Sean White</span>
+          <span class="fn" itemprop="name">Sean White</span>
         </a>
         <span class="title" itemprop="jobTitle">{{ _('VP, Technology Strategy') }}</span>
 
