--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/firefox-mobile.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/firefox-mobile.html
@@ -4,32 +4,34 @@
 
 {% extends "mozorg/contribute/tasks/taskview-base.html" %}
 
+{% add_lang_files "mozorg/contribute/signup" %}
+
 {% block page_title %}{{ _('Install Firefox for iOS or Android') }}{% endblock %}
 
-{% block taskview_title %}{{ _('Use Firefox on your iOS or Android phone and tablet!') }}{% endblock %}
+{% block taskview_title %}{{ _('Use Firefox on your iOS or Android phone and tablet') }}{% endblock %}
 {% block taskview_lead %}{{ _('Firefox is the independent mobile browser and by using this you’re supporting Mozilla’s mission and creating a browsing experience that is private and personal.') }}{% endblock %}
 
 {% block task_content %}
   <ol class="task-steps">
-    <li id="step_one" class="one">
-      <header>
+    <li>
+      <header id="step_one" class="one">
         <h3>{{ _('Add Firefox to your Android and iOS devices') }}</h3>
       </header>
       <div class="step-content">
         <div class="download-button-wrapper firefox-mobile">
+          {{ high_res_img('contribute/signup/firefox-mobile.png', {'width': '443', 'alt': '', 'class': 'feature-img'}) }}
           <a rel="external" class="download-link" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" target="_blank" data-link-type="download" data-download-os="Android">
-            {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '129', 'height': '45', 'l10n': True, 'data-action': 'install', 'data-task': 'firefox-mobile', 'data-step': 'one', 'data-complete': 'true', 'data-variation': '1', 'data-mobileversion': 'Android'}) }}
+            {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True, 'data-action': 'install', 'data-task': 'firefox-mobile', 'data-step': 'one', 'data-complete': 'true', 'data-mobileversion': 'Android'}) }}
           </a>
           <a rel="external" class="download-link" href="{{settings.APPLE_APPSTORE_FIREFOX_LINK}}" target="_blank">
-            <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45" data-action="install" data-task="firefox-mobile" data-step="one" data-complete="true" data-variation="1" data-mobileversion="iOS" />
+            <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45" data-action="install" data-task="firefox-mobile" data-step="one" data-complete="true" data-mobileversion="iOS">
           </a>
         </div>
-        {{ high_res_img('contribute/signup/firefox-mobile.png', {'width': '443', 'alt': '', 'class': 'feature-img'}) }}
       </div>
     </li>
   </ol>
 {% endblock %}
 
 {% block thank_you_msg %}
-  {{ _('Thanks for installing Firefox!') }}
+  {{ _('Thanks for installing Firefox') }}
 {% endblock %}
