--- a/media/css/mozorg/contribute/signup.less
+++ b/media/css/mozorg/contribute/signup.less
@@ -92,8 +92,8 @@ main {
         &:before {
             display: block;
             content: '';
-            .at2x('/media/img/contribute/signup/tasks-sprite.png', 600px, 600px);
-            background-position: -6px -9px;
+            .at2x('/media/img/contribute/signup/tasks-sprite.png', 594px, 400px);
+            background-position: -10px -10px;
             background-repeat: no-repeat;
             margin: 0 auto @baseLine;
             border: 5px solid #d1d2d3;
@@ -102,87 +102,77 @@ main {
             height: 185px;
 
             @media only screen and (max-width: @breakDesktop) {
-                background-size: 400px 400px;
+                background-position: -15px -10px;
+                .background-size(446px 300px);
                 width: 110px;
                 height: 110px;
             }
 
             @media only screen and (max-width: @breakTablet) {
-                background-size: 600px 600px;
+                background-position: -10px -10px;
+                .background-size(594px 400px);
                 width: 185px;
                 height: 185px;
             }
         }
 
         &.fx-mobile:before {
-            background-position: -205px -6px;
+            background-position: -205px -10px;
 
             @media only screen and (max-width: @breakDesktop) {
-                background-position: -147px -5px;
+                background-position: -163px -10px;
             }
 
             @media only screen and (max-width: @breakTablet) {
-                background-position: -204px -6px;
+                background-position: -204px -10px;
             }
         }
 
-        &.fx-twitter:before {
-            background-position: -408px -5px;
+        &.encryption:before {
+            background-position: -399px -10px;
 
             @media only screen and (max-width: @breakDesktop) {
-                background-position: -283px -4px;
+                background-position: -314px -19px;
             }
 
             @media only screen and (max-width: @breakTablet) {
-                background-position: -409px -6px;
-            }
-        }
-
-        &.startmozilla-twitter:before {
-            background-position: -409px -403px;
-
-            @media only screen and (max-width: @breakDesktop) {
-                background-position: -276px -281px;
-            }
-
-            @media only screen and (max-width: @breakTablet) {
-                background-position: -408px -403px;
+                background-position: -399px -10px;
             }
         }
 
         &.coding:before {
-            background-position: -6px -207px;
+            background-position: -10px -205px;
 
             @media only screen and (max-width: @breakDesktop) {
-                background-position: -9px -152px;
+                background-position: -20px -157px;
             }
 
             @media only screen and (max-width: @breakTablet) {
-                background-position: -5px -208px;
-            }
-        }
-
-        &.fxos:before {
-            background-position: -207px -207px;
-
-            @media only screen and (max-width: @breakDesktop) {
-                background-position: -145px -145px;
-            }
-
-            @media only screen and (max-width: @breakTablet) {
-                background-position: -207px -207px;
+                background-position: -10px -205px;
             }
         }
 
         &.devtools:before {
-            background-position: -408px -206px;
+            background-position: -205px -205px;
 
             @media only screen and (max-width: @breakDesktop) {
-                background-position: -286px -145px;
+                background-position: -165px -165px;
             }
 
             @media only screen and (max-width: @breakTablet) {
-                background-position: -408px -206px;
+                background-position: -205px -205px;
+            }
+        }
+
+        &.stumbler:before {
+            background-position: -399px -205px;
+
+            @media only screen and (max-width: @breakDesktop) {
+                background-position: -313px -160px;
+            }
+
+            @media only screen and (max-width: @breakTablet) {
+                background-position: -399px -205px;
             }
         }
     }
