--- a/media/css/mozorg/contribute/taskview.less
+++ b/media/css/mozorg/contribute/taskview.less
@@ -114,10 +114,10 @@ main {
 
     .page-title {
         margin: 0 auto @baseLine;
-        max-width: 580px;
+        max-width: 740px;
         .open-sans-light;
         .font-size(48px);
-        line-height: 1.3;
+        line-height: 1.2;
 
         @media only screen and (max-width: @breakTablet) {
             max-width: 500px;
@@ -146,35 +146,20 @@ main {
     li {
         margin: 0 0 (@baseLine * 2);
         width: 80%;
-
-        &:before {
-            display: inline-block;
-            border: 2px solid @foregroundColor;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            .font-size(24px);
-            font-weight: bold;
-            line-height: 2;
-            text-align: center;
-
-            @media only screen and (max-width: @breakTablet) {
-                width: 30px;
-                height: 30px;
-                .font-size(18px);
-                line-height: 1.6;
-            }
-        }
     }
 
     header {
-        margin-top: -50px;
+        position: relative;
         margin-left: 70px;
         width: 100%;
 
         @media only screen and (max-width: @breakTablet) {
-            margin-top: -32px;
             margin-left: 45px;
+        }
+
+        h3 {
+            display: inline-block;
+            line-height: 1.5;
         }
     }
 
@@ -182,7 +167,6 @@ main {
         .open-sans;
         .font-size(32px);
         font-weight: bold;
-        text-transform: uppercase;
         line-height: 1.3;
 
         @media only screen and (max-width: @breakTablet) {
@@ -194,8 +178,16 @@ main {
         }
     }
 
+    h4 {
+        color: #fff;
+        margin-top: (@baseLine * 2);
+        font-weight: bold;
+        text-shadow: none;
+    }
+
     .step-content {
-        display: inline-block;;
+        display: inline-block;
+        margin-top: @baseLine;
         margin-left: 70px;
         width: 100%;
 
@@ -204,34 +196,70 @@ main {
         }
     }
 
-    .one:before {
-        content: '1';
-    }
-
-    .two:before {
-        content: '2';
-    }
-
     .one.completed:before,
     .two.completed:before {
-        background: transparent url('/media/img/contribute/signup/complete-icon.svg') -30px -27px no-repeat;
-        background-size: 110px 110px;
+        position: absolute;
+        left: -65px;
+        background: transparent url('/media/img/contribute/signup/complete-icon.svg') -30px -33px no-repeat;
+        .background-size(90px 90px);
         content: '';
-        margin-right: 10px;
         border: none;
-        width: 60px;
-        height: 63px;
-        .font-size(48px);
-        line-height: 1;
-        vertical-align: bottom;
+        border-radius: 0;
+        width: 90px;
+        height: 90px;
+
+        @media only screen and (max-width: @breakTablet) {
+            .background-size(70px 70px);
+            background-position: -10px -23px;
+            width: 70px;
+            height: 70px;
+        }
+
+        @media only screen and (max-width: @breakMobileLandscape) {
+            .background-size(50px 50px);
+            background-position: -17px -13px;
+            left: -35px;
+            width: 50px;
+            height: 50px;
+        }
     }
 
     .feature-img {
+        display: block;
         margin: 0 0 @baseLine;
 
         @media only screen and (max-width: @breakMobileLandscape) {
             display: none;
         }
+    }
+
+    /* tweet this text background styling */
+    .tweet-this {
+        position: relative;
+        background-color: #fff;
+        color: @textColorPrimary;
+        margin-bottom: 50px;
+        padding: 15px;
+        border-radius: 4px;
+        border-bottom-left-radius: 0;
+        .font-size(1.1rem);
+        max-width: 620px;
+
+        &:after {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            content: '';
+            border-width: 30px 20px 0 0;
+            border-style: solid;
+            border-color: #fff transparent;
+        }
+    }
+
+    .stumbler-button {
+        display: block;
+        margin: @baseLine auto 10px;
+        width: 200px;
     }
 
     .download-button-wrapper {
@@ -324,40 +352,12 @@ a[role="button"] {
     }
 }
 
-/* Tweet form view */
-.tweet-form {
-    width: 100%;
-
-    fieldset {
-        border: none;
-    }
-
-    legend {
-        .font-size(2rem);
-    }
-
-    textarea {
-        margin-bottom: @baseLine;
-        padding: 10px;
-        .font-size(16px);
-        width: 100%;
-        height: 100px;
-
-        @media only screen and (max-width: @breakMobileLandscape) {
-            height: 130px;
-        }
-    }
-    .char-counter {
-        .font-size(16px);
-    }
-}
-
 /* button styles */
 .button-blue {
     display: block;
     background-color: #0C99D5;
     color: #fff;
-    margin-top: @baseLine;
+    margin: @baseLine 0;
     padding: 15px;
     border: none;
     border-radius: 6px;
@@ -400,15 +400,6 @@ a[role="button"] {
         width: 100%;
     }
 
-    /* styles for the link on the build firefox os task views */
-    &.foxfooding {
-        margin-top: -45px;
-
-        @media only screen and (max-width: @breakMobileLandscape) {
-            margin-top: inherit;
-        }
-    }
-
     /* we need to center the download button for dev edition */
     &.dev-edition {
         margin: 0 auto;
@@ -434,4 +425,65 @@ a[role="button"] {
 
 .hidden {
     display: none;
+}
+
+/* newsletter module styles */
+.newsletter-module {
+    background: #fff;
+    color: @textColorPrimary;
+    margin-top: @baseLine * 4;
+
+    .container {
+        margin: 0 auto;
+        padding: (@baseLine * 2) 0 @baseLine;
+        width: @widthDesktop;
+    }
+
+    .billboard {
+        padding-bottom: 0;
+        border: 0;
+    }
+
+    .form-title {
+        .span(6);
+        min-height: 200px;
+
+        &:before {
+            float: left;
+            content: '';
+            background: @mozillaRed url(/media/img/newsletter/mozorg-newsletter.svg) 23px 23px no-repeat;
+            .background-size(105px, 105px);
+            margin-top: -20px;
+            margin-right: @baseLine;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+        }
+    }
+
+    .form-contents,
+    .form-submit {
+        .span(6);
+    }
+
+    input[type="email"] {
+        width: 100%;
+    }
+}
+
+.notices {
+    margin: (@baseLine * 2) 0;
+    list-style-type: none;
+    .font-size(1rem);
+    text-align: center;
+
+    li {
+        display: inline-block;
+    }
+
+    li:last-child:before {
+        display: inline-block;
+        content: '•';
+        padding-right: @baseLine;
+    }
 }
