Fix Bug 1264828 - Add Monarch Chinesebrowser to list on Powered By page

--- a/bedrock/mozorg/templates/mozorg/powered-by.html
+++ b/bedrock/mozorg/templates/mozorg/powered-by.html
@@ -61,6 +61,7 @@
 			<li><a href="http://www.instantbird.com">{{ _("Instantbird")}}</a></li>
 			<li><a href="http://www.joybidder.com">{{ _("JoyBidder")}}</a></li>
 			<li><a href="http://kylo.tv">{{ _("Kylo")}}</a></li>
+			<li><a href="http://www.chinesebrowser.com/">{{ _("Monarch Chinesebrowser")}}</a></li>
 			<li><a href="http://www.palemoon.org">{{ _("Pale Moon")}}</a></li>
 			<li><a href="http://www.postbox-inc.com">{{ _("Postbox")}}</a></li>
 			<li><a href="http://quickstaf.testformation.com">{{ _("QuickSTAF")}}</a></li>
